# ohara

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  dev.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/locale/es/LC_MESSAGES/: django.po
backend/templates/: auth_base.html
backend/templates/admin/: base_site.html
backend/templates/includes/: icons.html
backend/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
backend/tracker/: admin.py  metrics.py  models.py  serializers.py  services.py  urls.py  views.py
backend/tracker/migrations/: 0001_initial.py  0002_add_user.py  0003_userpreference.py
backend/tracker/tests/: conftest.py  test_api.py  test_measurements.py  test_services.py  test_users.py
docs/: brand.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: charts.tsx  layout.tsx  range-select.tsx  stat-card.tsx  timer-card.tsx  week-list.tsx
frontend/src/components/brand/: OharaLogo.tsx  geometry.ts
frontend/src/lib/: api.ts  format.ts  i18n.ts  theme.ts
frontend/src/pages/: BrandPreview.tsx  dashboard.tsx  history.tsx  settings.tsx  weight.tsx
