[project]
name = "ohara-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3",
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
